[package]
name = "draco-server"
version = "0.1.0"
authors = ["TobiasGSmollett <landofscala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.4.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
